mix with bee happy to 02-02-2022

--- a/assets/sass/layout/home.scss
+++ b/assets/sass/layout/home.scss
@@ -1,7 +1,19 @@
 /////////////////////////////// HOME ///////////////////////////////
 
-main {
-    background-image: url(../img/entete_ruche.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-}
+.title {
+    display: flex;
+    justify-content: center;
+  
+    .titleImg {
+      position: relative;
+      margin-left: 10rem;
+      .titleText {
+        position: absolute;
+        text-align: center;    
+        top: 0;
+        right: 40rem;
+        width: 60%;
+      }
+    }
+  }
+  
