--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,10 +5,6 @@ nav {
   padding: 4rem;
   height: 65px;
 }
-nav .logo {
-  font-family: "Plaster";
-  font-size: 3.5rem;
-}
 nav .navigation {
   display: flex;
 }
@@ -18,7 +14,6 @@ nav .navigation .navLink {
 }
 nav .navigation .navLink a {
   text-decoration: none;
-  font-size: 2rem;
 }
 nav .navigation .navLink a:after {
   display: block;
@@ -30,6 +25,42 @@ nav .navigation .navLink a:after {
 }
 nav .navigation .navLink a:hover:after {
   width: 100%;
+}
+nav .switch {
+  position: absolute;
+}
+nav .switch .toggle .slider {
+  transition: 0.3s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  width: 4rem;
+  height: 2rem;
+  display: block;
+  border-radius: 2rem;
+  background-color: rgba(0, 0, 0, 0.06);
+  position: relative;
+}
+nav .switch .toggle .slider:after {
+  transition: 0.3s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  content: "";
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+nav .switch .toggle input {
+  display: none;
+}
+nav .switch .toggle input:checked + .slider {
+  background-color: #FBD40C;
+}
+nav .switch .toggle input:checked + .slider:after {
+  left: 2rem;
+}
+nav .darkMode {
+  margin-left: 5rem;
 }
 nav .burger {
   display: none;
@@ -130,9 +161,6 @@ nav .burger {
 }
 * {
   box-sizing: border-box;
-  outline: none;
-  margin: 0;
-  padding: 0;
 }
 
 html {
@@ -141,17 +169,56 @@ html {
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
-  color: #6b6b6b;
+  padding: 0;
   font-size: 1.6rem;
-  min-height: 100vh;
-  max-width: 100vw;
+  color: #6B6B6B;
+}
+body h1 {
+  font-family: "Plaster", cursive;
+  font-size: 8rem;
+  margin: 0;
+}
+body h2 {
+  font-family: "Plaster", cursive;
+  font-size: 6rem;
+  margin: 0;
+}
+body h3 {
+  font-family: "Plaster", cursive;
+  font-size: 4rem;
+  margin: 0;
+}
+body h4 {
+  font-family: "Plaster", cursive;
+  font-size: 2rem;
+  margin: 0;
+}
+body h5 {
+  font-family: "Homemade Apple", cursive;
+  font-size: 2.5rem;
+  margin: 0;
+  color: black;
+}
+body p, body a {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  color: black;
 }
 
-main {
-  background-image: url(../img/entete_ruche.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
+.title {
+  display: flex;
+  justify-content: center;
+}
+.title .titleImg {
+  position: relative;
+  margin-left: 10rem;
+}
+.title .titleImg .titleText {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  right: 40rem;
+  width: 60%;
 }
 
 /*# sourceMappingURL=main.css.map */
