--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -1,18 +1,47 @@
 * {
     box-sizing: border-box;
-    outline: none;
+  }
+  
+  html {
+    font-size: 62.5%;
+  }
+  
+  body {
     margin: 0;
     padding: 0;
-}
-html {
-    font-size: 62.5%;
-}
-
-body {
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-    color: #6b6b6b;
     font-size: 1.6rem;
-    min-height: 100vh;
-    max-width: 100vw;
-}
+    color: #6B6B6B;
+  
+    h1 {
+      font-family: "Plaster", cursive;
+      font-size: 8rem;
+      margin: 0;
+    }
+    h2 {
+      font-family: "Plaster", cursive;
+      font-size: 6rem;
+      margin: 0;
+    }
+    h3 {
+      font-family: "Plaster", cursive;
+      font-size: 4rem;
+      margin: 0;
+    }
+    h4 {
+      font-family: "Plaster", cursive;
+      font-size: 2rem;
+      margin: 0;
+    }
+    h5 {
+      font-family: "Homemade Apple", cursive;
+      font-size: 2.5rem;
+      margin: 0;
+      color: black;
+    }
+    p, a {
+      font-family: "Roboto", sans-serif;
+      margin: 0;
+      color: black;
+    }
+  }
+  
