--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -6,11 +6,6 @@ nav {
     justify-content: space-between;
     padding: 4rem;
     height: 65px;
-    .logo {
-        font-family: "Plaster";
-        font-size: 3.5rem;
-        
-    }
     .navigation {
         display: flex;
         .navLink {
@@ -18,7 +13,6 @@ nav {
             padding: 0 2rem;
             a {
                 text-decoration: none;
-                font-size: 2rem;
                 &:after {
                     display: block;
                     content: "";
@@ -31,7 +25,49 @@ nav {
                     width: 100%;
                 }
             }
+
         }
+    }
+    .switch {
+        position: absolute;
+        .toggle {
+          .slider {
+            transition: 0.3s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+            width: 4rem;
+            height: 2rem;
+            display: block;
+            border-radius: 2rem;
+            background-color: rgba(black, 0.06);
+            position: relative;
+            &:after {
+              transition: 0.3s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+              content: "";
+              width: 2rem;
+              height: 2rem;
+              display: block;
+              background-color: #fff;
+              border-radius: 50%;
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+          }
+
+          input {
+            display: none;
+            &:checked {
+                + .slider {
+                    background-color: #FBD40C;
+                    &:after {
+                    left: 2rem;
+                    }
+                }
+            }
+          }
+        }
+    }
+    .darkMode {
+        margin-left: 5rem;
     }
     .burger {
         display: none;
