--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -6,6 +6,7 @@ nav {
     justify-content: space-between;
     padding: 4rem;
     height: 65px;
+    /////////////////BURGER////////////////////////////
     .navigation {
         display: flex;
         .navLink {
@@ -28,6 +29,7 @@ nav {
 
         }
     }
+    ///////////////////DARK MODE////////////////////////////
     .switch {
         position: absolute;
         .toggle {
@@ -78,6 +80,7 @@ nav {
 
 @media screen and (max-width: 767.98px) {
     nav {
+        /////////////////BURGER////////////////////////////
         .navigation {
             overflow: hidden;
             display: flex;
@@ -87,7 +90,7 @@ nav {
             position: absolute;
             top: 65px;
             right: 0;
-            background-color: white;
+            // background-color: white;
             transition: all 0.5s ease-in-out;
             padding: 2rem;
             .navLink {
@@ -106,6 +109,7 @@ nav {
         }
         .navActiv {
             width: 100%;
+            z-index: 40;
             .navLink {
                 transform: translate(0);
             }
