--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,7 @@ nav .burger {
   justify-content: center;
 }
 .contact form .submit input {
+  cursor: pointer;
   border: none;
   width: 20%;
   color: white;
@@ -229,7 +230,7 @@ nav .burger {
     transform: translateY(0rem) rotate(-20deg);
   }
   to {
-    transform: translateY(8rem) rotate(80deg);
+    transform: translateY(12rem) rotate(80deg);
   }
 }
 @keyframes facebook {
@@ -240,15 +241,31 @@ nav .burger {
     transform: translateY(-5rem) rotate(-80deg);
   }
 }
+@keyframes mail {
+  from {
+    transform: translateY(12rem) rotate(0);
+  }
+  to {
+    transform: translateY(-8rem) rotate(-80deg);
+  }
+}
+@keyframes in {
+  from {
+    transform: translateY(-6rem) rotate(-20deg);
+  }
+  to {
+    transform: translateY(6rem) rotate(80deg);
+  }
+}
 footer {
-  margin-top: 10rem;
+  margin-top: 20rem;
 }
 footer .network {
   display: flex;
   justify-content: space-around;
 }
 footer .network a img {
-  width: 12rem;
+  width: 14rem;
 }
 footer .network a .facebook {
   animation-duration: 2s;
@@ -262,8 +279,20 @@ footer .network a .insta {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+footer .network a .mail {
+  animation-duration: 2s;
+  animation-name: mail;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+footer .network a .linkedin {
+  animation-duration: 2s;
+  animation-name: in;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 footer .footerBG img {
-  width: 98.8vw;
+  width: 100vw;
   margin: 0 auto;
 }
 
@@ -280,6 +309,7 @@ body {
   padding: 0;
   font-size: 1.6rem;
   color: #6B6B6B;
+  overflow-x: hidden;
 }
 body h1 {
   font-family: "Plaster", cursive;
@@ -336,6 +366,38 @@ body p, body a {
 .title .titleImg .titleText .beeTitle {
   width: 60%;
 }
+.title .titleImg .beekeeperShow {
+  transform: translateX(0);
+  background-color: #d6d1f3;
+  border-radius: 50%;
+  padding: 8rem;
+}
+.title .titleImg .beekeeperShow .brun {
+  position: relative;
+  right: 30%;
+}
+.title .titleImg .beekeeperShow .brun img {
+  width: 20rem;
+}
+.title .titleImg .beekeeperShow .brun img:hover {
+  transform: rotate(-30deg);
+  transition: 0.4s;
+}
+.title .titleImg .beekeeperShow .brun .blond {
+  position: absolute;
+  top: 0;
+  left: 50%;
+}
+.title .titleImg .beekeeperShow .brun .blond img {
+  width: 25rem;
+}
+.title .titleImg .beekeeperShow .brun .blond img:hover {
+  transform: rotate(30deg);
+  transition: 0.4s;
+}
+.title .titleImg .beekeepertitleShow {
+  transform: translateX(0);
+}
 .title .titleImg .beekeeper {
   position: absolute;
   display: flex;
@@ -348,6 +410,8 @@ body p, body a {
   background-color: #d6d1f3;
   border-radius: 50%;
   padding: 8rem;
+  transform: translateX(-200%);
+  transition: transform 0.4s ease;
 }
 .title .titleImg .beekeeper .beekeperLogo .brun {
   position: relative;
@@ -374,6 +438,8 @@ body p, body a {
 }
 .title .titleImg .beekeeper .beekeperTitle {
   margin-left: 20rem;
+  transform: translateX(180%);
+  transition: transform 0.4s ease;
 }
 .title .titleImg .beekeeper .beekeperTitle a {
   color: #6b6b6b;
@@ -391,7 +457,7 @@ body p, body a {
   justify-content: space-around;
 }
 .title .titleImg .honey .bigbug .bug {
-  min-width: 99vw;
+  min-width: 100vw;
 }
 .title .titleImg .honey .bigbug .honeyCube {
   background-color: #fff9e3;
@@ -410,7 +476,7 @@ body p, body a {
 }
 .title .titleImg .honey .bigbug .company {
   position: absolute;
-  right: 30%;
+  right: 25%;
   top: 20%;
   transform: rotate(90deg);
 }
