--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -11,6 +11,7 @@
     padding: 0;
     font-size: 1.6rem;
     color: #6B6B6B;
+    overflow-x: hidden;
   
     h1 {
       font-family: "Plaster", cursive;
