--- a/assets/sass/components/_contact.scss
+++ b/assets/sass/components/_contact.scss
@@ -29,6 +29,7 @@
       display: flex;
       justify-content: center;
       input {
+        cursor: pointer;
         border: none;
         width: 20%;
         color: white;
