--- a/assets/sass/layout/home.scss
+++ b/assets/sass/layout/home.scss
@@ -23,6 +23,38 @@
       }
     }
     /////////////////////////////BEEKEEPER////////////////////////////////////////
+    .beekeeperShow {
+      transform: translateX(0);
+      background-color: #d6d1f3;
+      border-radius: 50%;
+      padding: 8rem;
+      .brun {
+        position: relative;
+        right: 30%;
+        img {
+          width: 20rem;
+          &:hover {
+            transform: rotate(-30deg);
+            transition: 0.4s;
+          }
+        }
+        .blond {
+          position: absolute;
+          top: 0;
+          left: 50%;
+          img {
+            width: 25rem;
+            &:hover {
+              transform: rotate(30deg);
+              transition: 0.4s;
+            }
+          }
+        }
+      }
+    }
+    .beekeepertitleShow {
+      transform: translateX(0);
+    }
     .beekeeper {
       position: absolute;
       display: flex;
@@ -30,10 +62,14 @@
       align-items: center;
       top: 33%;
       right: 22%;
+
       .beekeperLogo {
         background-color: #d6d1f3;
         border-radius: 50%;
         padding: 8rem;
+
+        transform: translateX(-200%);
+        transition: transform 0.4s ease;
         .brun {
           position: relative;
           right: 30%;
@@ -60,6 +96,8 @@
       }
       .beekeperTitle {
         margin-left: 20rem;
+        transform: translateX(180%);
+        transition: transform 0.4s ease;
         a {
           color: #6b6b6b;
         }
@@ -77,7 +115,7 @@
         display: flex;
         justify-content: space-around;
         .bug {
-          min-width: 99vw;
+          min-width: 100vw;
         }
         .honeyCube {
           background-color: #fff9e3;
@@ -96,7 +134,7 @@
         }
         .company {
           position: absolute;
-          right: 30%;
+          right: 25%;
           top: 20%;
           transform: rotate(90deg);
         }
@@ -104,8 +142,6 @@
     }
   }
 }
-
-
 
 /////////////////////////////// HOME RESPONSIV ///////////////////////////////
 
