--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -6,7 +6,7 @@
     font-size: 62.5%;
   }
   .darkMode {
-    background: #503958;
+    background: #38253f;
     color: white;
     h5 {
       color: white;
