--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -25,27 +25,22 @@
   
     h1 {
       font-family: "Plaster", cursive;
-      font-size: 8rem;
       margin: 0;
     }
     h2 {
       font-family: "Plaster", cursive;
-      font-size: 6rem;
       margin: 0;
     }
     h3 {
       font-family: "Plaster", cursive;
-      font-size: 4rem;
       margin: 0;
     }
     h4 {
       font-family: "Plaster", cursive;
-      font-size: 2rem;
       margin: 0;
     }
     h5 {
       font-family: "Homemade Apple", cursive;
-      font-size: 2.5rem;
       margin: 0;
       color: black;
     }
@@ -54,6 +49,11 @@
       margin: 0;
       color: black;
       text-decoration: none;
+    }
+    h6 {
+      font-family: "Plaster", cursive;
+      margin: 0;
+      font-size: 5rem;
     }
   }
   
