--- a/assets/sass/components/_fly.scss
+++ b/assets/sass/components/_fly.scss
@@ -1,3 +1,24 @@
+@keyframes fly {
+  0% {
+    transform: translateX(-300%);
+  }
+  30% {
+    transform: translateX(-200%) translateY(20%);
+  }
+  68% {
+    transform: translateX(50%) translateY(-20%);
+  }
+  100% {
+    transform: translateX(380%) translateY(30%);
+  }
+}
+
+.beeflyImgShow {
+  animation-duration: 2s;
+  animation-name: fly;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 .beeBG {
   position: relative;
   .bg {
@@ -14,6 +35,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    .beeflyImg {
+      transform: translateX(-300%);
+      transition: transform 2s ease;
+    }
     h2 {
       color: white;
       font-size: 6rem;
